Base of styles added
Base of styles added

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,13 +5,17 @@ body {
 
 .form {
     margin: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     margin-top: 20px;
-    background-color: #496074;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 20px;
+    background-color: #E8EDDF;
+    border-radius: 5px;
     max-width: 700px;
     width: 100%;
+    min-height: 500px;
+    height: 100%;
 }
 
 .form__title {
@@ -23,5 +27,35 @@ body {
     color: #2D4259;
     font-family: "quicksand", serif;
     font-size: 36px;
+    border-radius: 5px;
+}
+
+.label {
+    padding: 7px;
+    border-radius: 5px;
+    background-color: #496074; 
+    color: #fff;
+    font-family: "quicksand", serif;
+    font-size: 16px;
+
+}
+
+.input {
+    background-color: #A1BFA7;
+    padding: 7px;
+    border-radius: 5px;
+    border: none;
+    font-family: "quicksand", serif;
+    font-size: 14px;
+    font-style: italic;
+    color: #2D4259;
+}
+
+.input::placeholder {
+    color: #2D4259; 
+}
+
+.select {
+    
 }
 
