--- a/styles/index.css
+++ b/styles/index.css
@@ -49,12 +49,16 @@ body {
     border: none;
     font-family: "quicksand", serif;
     font-size: 14px;
-    font-style: italic;
     color: #2D4259;
 }
 
 .input::placeholder {
     color: #2D4259; 
+    font-style: italic;
+}
+
+.input:hover {
+    background-color: #869e8b;
 }
 
 .select {
@@ -65,11 +69,56 @@ body {
     cursor: pointer;
 }
 
-.checkbox {
+.select:hover {
+    background-color: #869e8b;
+}
+
+.checkbox__container {
+    display: block;
+    position: relative;
     margin-top: 20px;
     margin-bottom: 20px;
-    cursor: pointer; 
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
 }
+
+.checkbox__info {
+    margin-left: 30px;
+    line-height: 23px;
+    font-family: "quicksand", serif; 
+    font-size: 16px; 
+    color: #1A2E41;
+}
+
+.checkbox__container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 23px;
+    width: 23px;
+    background-color: #A1BFA7; 
+    border-radius: 5px;
+}
+
+.checkbox__container:hover input ~ .checkmark {
+    background-color: #869e8b;
+}
+
+
+
+
+
 
 .button {
     padding: 7px;
